1. LF로 변경